# smp

./: CMakeLists.txt  README.md  build.sh
example/: CMakeLists.txt  fuple.cpp  indexer.cpp  invocable_name.cpp  lists.cpp  reflect.cpp  smp.cpp  visitor.cpp
include/: fuple.hpp  indexer.hpp  invocable_name.hpp  lists.hpp  reflect.hpp  smp.hpp  version.hpp  visitor.hpp
